Stream counts depending on day time

--- a/project.ipynb
+++ b/project.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "856cf6de-4d76-4f26-a2d8-bc8eaf6a856b",
    "metadata": {},
    "outputs": [
@@ -147,86 +147,397 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 12:00:00</th>\n",
-       "      <td>12</td>\n",
+       "      <th>2021-12-01 03:00:00</th>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 13:00:00</th>\n",
-       "      <td>13</td>\n",
+       "      <th>2021-12-01 04:00:00</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 14:00:00</th>\n",
-       "      <td>14</td>\n",
+       "      <th>2021-12-01 05:00:00</th>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-02 12:00:00</th>\n",
-       "      <td>36</td>\n",
+       "      <th>2021-12-01 06:00:00</th>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-02 13:00:00</th>\n",
-       "      <td>37</td>\n",
+       "      <th>2021-12-02 03:00:00</th>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-30 13:00:00</th>\n",
-       "      <td>709</td>\n",
+       "      <th>2021-12-30 06:00:00</th>\n",
+       "      <td>702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-30 14:00:00</th>\n",
-       "      <td>710</td>\n",
+       "      <th>2021-12-31 03:00:00</th>\n",
+       "      <td>723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 12:00:00</th>\n",
-       "      <td>732</td>\n",
+       "      <th>2021-12-31 04:00:00</th>\n",
+       "      <td>724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 13:00:00</th>\n",
-       "      <td>733</td>\n",
+       "      <th>2021-12-31 05:00:00</th>\n",
+       "      <td>725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 14:00:00</th>\n",
-       "      <td>734</td>\n",
+       "      <th>2021-12-31 06:00:00</th>\n",
+       "      <td>726</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>93 rows × 1 columns</p>\n",
+       "<p>124 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                       H\n",
-       "2021-12-01 12:00:00   12\n",
-       "2021-12-01 13:00:00   13\n",
-       "2021-12-01 14:00:00   14\n",
-       "2021-12-02 12:00:00   36\n",
-       "2021-12-02 13:00:00   37\n",
+       "2021-12-01 03:00:00    3\n",
+       "2021-12-01 04:00:00    4\n",
+       "2021-12-01 05:00:00    5\n",
+       "2021-12-01 06:00:00    6\n",
+       "2021-12-02 03:00:00   27\n",
        "...                  ...\n",
-       "2021-12-30 13:00:00  709\n",
-       "2021-12-30 14:00:00  710\n",
-       "2021-12-31 12:00:00  732\n",
-       "2021-12-31 13:00:00  733\n",
-       "2021-12-31 14:00:00  734\n",
+       "2021-12-30 06:00:00  702\n",
+       "2021-12-31 03:00:00  723\n",
+       "2021-12-31 04:00:00  724\n",
+       "2021-12-31 05:00:00  725\n",
+       "2021-12-31 06:00:00  726\n",
        "\n",
-       "[93 rows x 1 columns]"
+       "[124 rows x 1 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "daytime= pd.DataFrame({'H': np.arange(len(dfdate))}, index=dfdate)\n",
-    "#dfdate.between_time('12:00','15:00')\n",
+    "# Creating H columnt to number each hour sample in the date range \n",
+    "df= pd.DataFrame({'H': np.arange(len(dfdate))}, index=dfdate)\n",
     "\n",
+    "# Spliting time series by time of day as dataframe variable\n",
+    "night = pd.DataFrame(df.between_time(\"02:01\",\"06:00\"))\n",
+    "morning = pd.DataFrame(df.between_time(\"06:01\",\"12:00\"))\n",
+    "afternoon = pd.DataFrame(df.between_time(\"12:01\",\"17:00\"))\n",
+    "evening = pd.DataFrame(df.between_time(\"17:01\",\"02:00\"))\n",
     "\n",
-    "#dfdate.between_time('12:00','13:00')\n",
-    "#dfdate.indexer_between_time\n",
-    "# Spliting time series by time of day\n",
-    "daytime.between_time(\"12:00\",\"14:00\")"
+    "night"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7086cdbf-f4a7-4bdb-94be-c231db4f9634",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting time of day clasification by times  \n",
+    "night['periods'] = 'night'\n",
+    "morning['periods'] = 'morning'\n",
+    "afternoon['periods'] = 'afternoon'\n",
+    "evening['periods'] = 'evening'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "237b31b5-3568-44ad-bea6-476fdabd516e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding date-time as value instead of index\n",
+    "df['udates'] = df.index\n",
+    "# Populating weekdays for weekend usage to be incremented\n",
+    "df['weekday'] = df.index.weekday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "29873508-2167-426b-a11b-83e668ba537c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>udates</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01 00:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-12-01 01:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-12-01 02:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-12-01 03:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-12-01 04:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739</th>\n",
+       "      <td>2021-12-31 19:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>2021-12-31 20:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>2021-12-31 21:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>2021-12-31 22:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>2021-12-31 23:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>744 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 udates  weekday\n",
+       "H                               \n",
+       "0   2021-12-01 00:00:00        2\n",
+       "1   2021-12-01 01:00:00        2\n",
+       "2   2021-12-01 02:00:00        2\n",
+       "3   2021-12-01 03:00:00        2\n",
+       "4   2021-12-01 04:00:00        2\n",
+       "..                  ...      ...\n",
+       "739 2021-12-31 19:00:00        4\n",
+       "740 2021-12-31 20:00:00        4\n",
+       "741 2021-12-31 21:00:00        4\n",
+       "742 2021-12-31 22:00:00        4\n",
+       "743 2021-12-31 23:00:00        4\n",
+       "\n",
+       "[744 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting index to H for data to be joined based on\n",
+    "df.set_index('H', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4f028165-f69c-449a-bd4e-172edab7406b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random steam counts for different time of the day\n",
+    "# Night streams 0 to 3 per hour\n",
+    "night['streams'] = rng.integers(0, 3, len(night))\n",
+    "# Morning streams 2 to 10 per hour\n",
+    "morning['streams'] = rng.integers(2, 10, len(morning))\n",
+    "# Afternoon streams 8 to 20 per hour\n",
+    "afternoon['streams'] = rng.integers(8, 20, len(afternoon))\n",
+    "# Evening streams 20 to 35 per hour\n",
+    "evening['streams'] = rng.integers(20, 35, len(evening))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3a2e078c-7447-4d3a-89ac-8c2891ffed69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>H</th>\n",
+       "      <th>periods</th>\n",
+       "      <th>streams</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 00:00:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 01:00:00</th>\n",
+       "      <td>1</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 02:00:00</th>\n",
+       "      <td>2</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 18:00:00</th>\n",
+       "      <td>18</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 19:00:00</th>\n",
+       "      <td>19</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 19:00:00</th>\n",
+       "      <td>739</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 20:00:00</th>\n",
+       "      <td>740</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 21:00:00</th>\n",
+       "      <td>741</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 22:00:00</th>\n",
+       "      <td>742</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 23:00:00</th>\n",
+       "      <td>743</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>279 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       H  periods  streams\n",
+       "2021-12-01 00:00:00    0  evening       34\n",
+       "2021-12-01 01:00:00    1  evening       28\n",
+       "2021-12-01 02:00:00    2  evening       33\n",
+       "2021-12-01 18:00:00   18  evening       24\n",
+       "2021-12-01 19:00:00   19  evening       34\n",
+       "...                  ...      ...      ...\n",
+       "2021-12-31 19:00:00  739  evening       24\n",
+       "2021-12-31 20:00:00  740  evening       20\n",
+       "2021-12-31 21:00:00  741  evening       23\n",
+       "2021-12-31 22:00:00  742  evening       25\n",
+       "2021-12-31 23:00:00  743  evening       33\n",
+       "\n",
+       "[279 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evening"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "919a15ad-609d-4942-afc4-d794bcdafe7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -255,11 +566,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b876f6bb-0f16-4576-9d2d-5e726fea57ca",
+   "cell_type": "markdown",
+   "id": "84745097-072d-4d79-9d85-ac319196c466",
    "metadata": {},
-   "outputs": [],
    "source": [
     "User ID will be generated chosing two letters followed by three random numbers, 50 active users from Ireland will have User IDs assigned."
    ]
@@ -281,11 +590,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a837f658-d615-4799-b333-30e0a3c4afba",
+   "cell_type": "markdown",
+   "id": "3ee20463-062d-4219-9bce-3b42bb37f192",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Gender will be populated for User IDs that will determine name surname "
    ]
@@ -327,10 +634,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7ead2d5a-58a9-4ac8-9301-f480679b1e0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-579feab57d0d>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-579feab57d0d>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Data will be joined together indexing one of data variables\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Data will be joined together indexing one of data variables "
    ]
@@ -496,9 +812,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13ffbcbe-fc0f-4fad-9025-7b6a2e77b610",
+   "metadata": {},
+   "source": [
+    "https://numpy.org/doc/stable/reference/generated/numpy.rint.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad8a88a8-47cf-4fbe-aa45-0ac14d91f9f1",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/28009370/get-weekday-day-of-week-for-datetime-column-of-dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71936163-880b-4fdd-aa86-3791baa57481",
+   "id": "82a143a3-6ac1-40a3-b351-9fd07a64633c",
    "metadata": {},
    "outputs": [],
    "source": []
