--- a/project.ipynb
+++ b/project.ipynb
@@ -378,7 +378,7 @@
     }
    ],
    "source": [
-    "# Setting index to H for data to be joined based on\n",
+    "# Setting df index to H for data to be joined based on\n",
     "df.set_index('H', inplace=True)\n",
     "df"
    ]
@@ -386,6 +386,130 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "5b80aea0-2f54-40f2-b12d-81093bb5e4b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>udates</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01 00:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-12-01 01:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-12-01 02:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-12-01 03:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-12-01 04:00:00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739</th>\n",
+       "      <td>2021-12-31 19:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>2021-12-31 20:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>2021-12-31 21:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>2021-12-31 22:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>2021-12-31 23:00:00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>744 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 udates  weekday\n",
+       "H                               \n",
+       "0   2021-12-01 00:00:00        2\n",
+       "1   2021-12-01 01:00:00        2\n",
+       "2   2021-12-01 02:00:00        2\n",
+       "3   2021-12-01 03:00:00        2\n",
+       "4   2021-12-01 04:00:00        2\n",
+       "..                  ...      ...\n",
+       "739 2021-12-31 19:00:00        4\n",
+       "740 2021-12-31 20:00:00        4\n",
+       "741 2021-12-31 21:00:00        4\n",
+       "742 2021-12-31 22:00:00        4\n",
+       "743 2021-12-31 23:00:00        4\n",
+       "\n",
+       "[744 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4f028165-f69c-449a-bd4e-172edab7406b",
    "metadata": {},
    "outputs": [],
@@ -403,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3a2e078c-7447-4d3a-89ac-8c2891ffed69",
    "metadata": {},
    "outputs": [
@@ -438,19 +562,19 @@
        "      <th>2021-12-01 00:00:00</th>\n",
        "      <td>0</td>\n",
        "      <td>evening</td>\n",
-       "      <td>34</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-01 01:00:00</th>\n",
        "      <td>1</td>\n",
        "      <td>evening</td>\n",
-       "      <td>28</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-01 02:00:00</th>\n",
        "      <td>2</td>\n",
        "      <td>evening</td>\n",
-       "      <td>33</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-01 18:00:00</th>\n",
@@ -474,7 +598,7 @@
        "      <th>2021-12-31 19:00:00</th>\n",
        "      <td>739</td>\n",
        "      <td>evening</td>\n",
-       "      <td>24</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-31 20:00:00</th>\n",
@@ -486,7 +610,7 @@
        "      <th>2021-12-31 21:00:00</th>\n",
        "      <td>741</td>\n",
        "      <td>evening</td>\n",
-       "      <td>23</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-31 22:00:00</th>\n",
@@ -498,7 +622,7 @@
        "      <th>2021-12-31 23:00:00</th>\n",
        "      <td>743</td>\n",
        "      <td>evening</td>\n",
-       "      <td>33</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -507,22 +631,22 @@
       ],
       "text/plain": [
        "                       H  periods  streams\n",
-       "2021-12-01 00:00:00    0  evening       34\n",
-       "2021-12-01 01:00:00    1  evening       28\n",
-       "2021-12-01 02:00:00    2  evening       33\n",
+       "2021-12-01 00:00:00    0  evening       28\n",
+       "2021-12-01 01:00:00    1  evening       31\n",
+       "2021-12-01 02:00:00    2  evening       22\n",
        "2021-12-01 18:00:00   18  evening       24\n",
        "2021-12-01 19:00:00   19  evening       34\n",
        "...                  ...      ...      ...\n",
-       "2021-12-31 19:00:00  739  evening       24\n",
+       "2021-12-31 19:00:00  739  evening       31\n",
        "2021-12-31 20:00:00  740  evening       20\n",
-       "2021-12-31 21:00:00  741  evening       23\n",
+       "2021-12-31 21:00:00  741  evening       32\n",
        "2021-12-31 22:00:00  742  evening       25\n",
-       "2021-12-31 23:00:00  743  evening       33\n",
+       "2021-12-31 23:00:00  743  evening       34\n",
        "\n",
        "[279 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,11 +657,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "919a15ad-609d-4942-afc4-d794bcdafe7d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Joining data\n",
+    "# Setting index to H for all\n",
+    "night.set_index('H', inplace=True)\n",
+    "morning.set_index('H', inplace=True)\n",
+    "afternoon.set_index('H', inplace=True)\n",
+    "evening.set_index('H', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "32d08528-74d1-406b-891f-e730ebd22bc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>periods</th>\n",
+       "      <th>streams</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>night</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>night</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>night</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>night</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>night</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739</th>\n",
+       "      <td>evening</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>evening</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>evening</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>evening</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>evening</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>744 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     periods  streams\n",
+       "H                    \n",
+       "3      night        2\n",
+       "4      night        2\n",
+       "5      night        2\n",
+       "6      night        2\n",
+       "27     night        2\n",
+       "..       ...      ...\n",
+       "739  evening       31\n",
+       "740  evening       20\n",
+       "741  evening       32\n",
+       "742  evening       25\n",
+       "743  evening       34\n",
+       "\n",
+       "[744 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Appending time of the day dataframes to be joined together\n",
+    "night = night.append(morning)\n",
+    "night = night.append(afternoon)\n",
+    "night = night.append(evening)\n",
+    "night"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "008abdb0-a399-47d9-a5d2-277a74cd6d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Joining values all together on preset index H\n",
+    "df = df.join(night, how='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a447684a-2249-46d4-8bec-d1ef5b88a144",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#df.to_excel('data/check.xlsx')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -633,20 +916,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "7ead2d5a-58a9-4ac8-9301-f480679b1e0e",
+   "cell_type": "markdown",
+   "id": "d803b6ae-8431-44ed-aac9-a59812990845",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-579feab57d0d>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-579feab57d0d>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Data will be joined together indexing one of data variables\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "Data will be joined together indexing one of data variables "
    ]
@@ -828,9 +1100,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4132a8c8-ab6e-4e0c-9727-03333eb41c8e",
+   "metadata": {},
+   "source": [
+    "https://pandas.pydata.org/pandas-docs/version/0.17.1/merging.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82a143a3-6ac1-40a3-b351-9fd07a64633c",
+   "id": "d870ddba-e2ff-4386-a671-e1c80c600b9f",
    "metadata": {},
    "outputs": [],
    "source": []
