--- a/project.ipynb
+++ b/project.ipynb
@@ -562,31 +562,31 @@
        "      <th>2021-12-01 00:00:00</th>\n",
        "      <td>0</td>\n",
        "      <td>evening</td>\n",
-       "      <td>28</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-01 01:00:00</th>\n",
        "      <td>1</td>\n",
        "      <td>evening</td>\n",
-       "      <td>31</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-01 02:00:00</th>\n",
        "      <td>2</td>\n",
        "      <td>evening</td>\n",
-       "      <td>22</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-01 18:00:00</th>\n",
        "      <td>18</td>\n",
        "      <td>evening</td>\n",
-       "      <td>24</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-01 19:00:00</th>\n",
        "      <td>19</td>\n",
        "      <td>evening</td>\n",
-       "      <td>34</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -598,25 +598,25 @@
        "      <th>2021-12-31 19:00:00</th>\n",
        "      <td>739</td>\n",
        "      <td>evening</td>\n",
-       "      <td>31</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-31 20:00:00</th>\n",
        "      <td>740</td>\n",
        "      <td>evening</td>\n",
-       "      <td>20</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-31 21:00:00</th>\n",
        "      <td>741</td>\n",
        "      <td>evening</td>\n",
-       "      <td>32</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-31 22:00:00</th>\n",
        "      <td>742</td>\n",
        "      <td>evening</td>\n",
-       "      <td>25</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-31 23:00:00</th>\n",
@@ -631,16 +631,16 @@
       ],
       "text/plain": [
        "                       H  periods  streams\n",
-       "2021-12-01 00:00:00    0  evening       28\n",
-       "2021-12-01 01:00:00    1  evening       31\n",
-       "2021-12-01 02:00:00    2  evening       22\n",
-       "2021-12-01 18:00:00   18  evening       24\n",
-       "2021-12-01 19:00:00   19  evening       34\n",
+       "2021-12-01 00:00:00    0  evening       29\n",
+       "2021-12-01 01:00:00    1  evening       24\n",
+       "2021-12-01 02:00:00    2  evening       29\n",
+       "2021-12-01 18:00:00   18  evening       26\n",
+       "2021-12-01 19:00:00   19  evening       32\n",
        "...                  ...      ...      ...\n",
-       "2021-12-31 19:00:00  739  evening       31\n",
-       "2021-12-31 20:00:00  740  evening       20\n",
-       "2021-12-31 21:00:00  741  evening       32\n",
-       "2021-12-31 22:00:00  742  evening       25\n",
+       "2021-12-31 19:00:00  739  evening       24\n",
+       "2021-12-31 20:00:00  740  evening       34\n",
+       "2021-12-31 21:00:00  741  evening       26\n",
+       "2021-12-31 22:00:00  742  evening       28\n",
        "2021-12-31 23:00:00  743  evening       34\n",
        "\n",
        "[279 rows x 3 columns]"
@@ -710,12 +710,12 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>night</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>night</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -730,7 +730,7 @@
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>night</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -740,22 +740,22 @@
        "    <tr>\n",
        "      <th>739</th>\n",
        "      <td>evening</td>\n",
-       "      <td>31</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>740</th>\n",
        "      <td>evening</td>\n",
-       "      <td>20</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>741</th>\n",
        "      <td>evening</td>\n",
-       "      <td>32</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>742</th>\n",
        "      <td>evening</td>\n",
-       "      <td>25</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>743</th>\n",
@@ -770,16 +770,16 @@
       "text/plain": [
        "     periods  streams\n",
        "H                    \n",
-       "3      night        2\n",
-       "4      night        2\n",
+       "3      night        0\n",
+       "4      night        1\n",
        "5      night        2\n",
        "6      night        2\n",
-       "27     night        2\n",
+       "27     night        1\n",
        "..       ...      ...\n",
-       "739  evening       31\n",
-       "740  evening       20\n",
-       "741  evening       32\n",
-       "742  evening       25\n",
+       "739  evening       24\n",
+       "740  evening       34\n",
+       "741  evening       26\n",
+       "742  evening       28\n",
        "743  evening       34\n",
        "\n",
        "[744 rows x 2 columns]"
@@ -818,8 +818,160 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "#df.to_excel('data/check.xlsx')"
+    "# Increasing weekend views to additional 30% on Fri, 40% Sat, Sun\n",
+    "# Also, rounding to int \n",
+    "df['streams'] = np.rint(np.where(df['weekday'] == 4, df['streams'] * 1.3, df['streams']))\n",
+    "df['streams'] = np.rint(np.where((df['weekday'] == 5) | (df['weekday'] == 6), df['streams'] * 1.4, df['streams']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fdb8d8bf-a110-4c48-81b3-692a932a5bb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>udates</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>periods</th>\n",
+       "      <th>streams</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01 00:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-12-01 01:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-12-01 02:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-12-01 03:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>night</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-12-01 04:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>night</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739</th>\n",
+       "      <td>2021-12-31 19:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>2021-12-31 20:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>2021-12-31 21:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>2021-12-31 22:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>2021-12-31 23:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>744 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 udates  weekday  periods  streams\n",
+       "H                                                 \n",
+       "0   2021-12-01 00:00:00        2  evening     29.0\n",
+       "1   2021-12-01 01:00:00        2  evening     24.0\n",
+       "2   2021-12-01 02:00:00        2  evening     29.0\n",
+       "3   2021-12-01 03:00:00        2    night      0.0\n",
+       "4   2021-12-01 04:00:00        2    night      1.0\n",
+       "..                  ...      ...      ...      ...\n",
+       "739 2021-12-31 19:00:00        4  evening     31.0\n",
+       "740 2021-12-31 20:00:00        4  evening     44.0\n",
+       "741 2021-12-31 21:00:00        4  evening     34.0\n",
+       "742 2021-12-31 22:00:00        4  evening     36.0\n",
+       "743 2021-12-31 23:00:00        4  evening     44.0\n",
+       "\n",
+       "[744 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -834,11 +986,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "21a19515-4a0c-4632-902a-22c069940285",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Setting available movie/TV series categories\n",
+    "categories = ['Action', 'Comedy', 'Drama', 'Fantasy', 'Horror', 'Mystery', 'Romance', 'Thriller', 'Western']\n",
+    "\n",
+    "#df['categories'] = rng.choice(categories,size=(len(df)))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -858,11 +1015,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b7d362be-fa1f-4201-bb79-df005772be6d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing Python modules String and Random\n",
+    "import string\n",
+    "import random\n",
+    "\n",
+    "uid=[]\n",
+    "letters=''.join(random.choices(string.ascii_uppercase,k=2))\n",
+    "digits=''.join(random.choices(string.digits,k=3))\n",
+    "i=0\n",
+    "for i in range(50):\n",
+    "    uid.append(''.join(random.choices(string.ascii_uppercase,k=2)) + ''.join(random.choices(string.digits,k=3)))\n",
+    "    i +=1          \n",
+    "print(i)           \n",
+    "\n",
+    "\n",
+    "#df['categories'] = rng.choice(categories,size=(len(df)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -879,6 +1060,14 @@
    "source": [
     "Gender will be populated for User IDs that will determine name surname "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68db1a26-834b-414c-8d82-aa185c00eb4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -949,11 +1138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "57d968b9-6b91-4f21-8a5e-757d9102e288",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.to_excel('data/check.xlsx')"
+   ]
   },
   {
    "cell_type": "code",
@@ -973,10 +1164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "87bd68df-895e-4e3b-9cc1-d22043de8ff9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-fb5d223276d5>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-18-fb5d223276d5>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Descriptive statistics\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Descriptive statistics"
    ]
@@ -1108,9 +1308,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d554ee70-d7cd-42db-9198-47f41a2708c8",
+   "metadata": {},
+   "source": [
+    "https://www.stackvidhya.com/pandas-iterate-over-rows/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f67fd79-e20d-47ac-938d-cfd6ef8b6409",
+   "metadata": {},
+   "source": [
+    "https://datagy.io/pandas-conditional-column/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b12c52a1-bdfe-42e5-b9de-d6c6aa076d25",
+   "metadata": {},
+   "source": [
+    "https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.itertuples.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bf72e16-753f-463a-a1ff-8e1c8d6e6993",
+   "metadata": {},
+   "source": [
+    "https://www.geeksforgeeks.org/how-to-generate-a-random-letter-in-python/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebb7d019-1f98-4373-b24a-f64b9caaa933",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/2823316/generate-a-random-letter-in-python"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d870ddba-e2ff-4386-a671-e1c80c600b9f",
+   "id": "19703cf7-c323-445b-a80a-88390d744a32",
    "metadata": {},
    "outputs": [],
    "source": []
