--- a/project.ipynb
+++ b/project.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Intro\n",
     "***\n",
-    "The aim of this project is to simulate dataset that represents real life measurable phenomenon with simulated dataset having at least one hundred data points with at least four different variables. Sinthesised data should have close to real life properties and relationship amongst variables."
+    "The aim of this project is to simulate dataset that represents real life measurable phenomenon with simulated dataset having at least one hundred data points with at least four different variables. Synthesised data should have close to real life properties and relationship amongst variables."
    ]
   },
   {
@@ -27,7 +27,7 @@
    "source": [
     "# Project description plan\n",
     "***\n",
-    "During recent wordwide lockdown it became increasingly popular to have a subscription to one of many movie/TV streaming services. These platforms experienced unprecedented growth month on month basis becoming a daily habit for most. This project will look into simulating a dataset of fictional movie streaming platform 'MFLIX' usage log with dates, movie stream count per hour, movie category, user ID, user gender and user name. Various methods learned during this semester will be applied in this project to create a dataset with dependent variables."
+    "During recent worldwide lockdown it became increasingly popular to have a subscription to one of many movie/TV streaming services. These platforms experienced unprecedented growth month on month basis becoming a daily habit for most. This project will look into simulating a dataset of fictional movie streaming platform 'MFLIX' usage log with dates, movie stream count per hour, movie category, user ID, user gender and user name. Various methods learned during this semester will be applied in this project to create a dataset with dependent variables."
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "source": [
     "# Dates and times by hour\n",
-    "MFLIX dataset requires a rannge of dates by hour for usage statistics simulation. A list od hourly timestamps will be generated to represent one month of usage that is December in 2021."
+    "MFLIX dataset requires a range of dates by hour for usage statistics simulation. A list of hourly timestamps will be generated to represent one month of usage that is December in 2021."
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "# Streaming counts\n",
     "***\n",
-    "To have realistic sreaming data views per hour needs to adhere to time of day to simulate peak and off-peak times of the day. Time serries data will be split by time of the day for random streaming data count to be generated having fewer streams during late night and early morning hours, medium usage during the day and peak time from 5 PM to 1AM. Streams will be 30% higher on Fridays, where on Saturday and Sunday they will increase to 40% compared to average work day usage."
+    "To have realistic screaming data views per hour needs to adhere to time of day to simulate peak and off-peak times of the day. Time series data will be split by time of the day for random streaming data count to be generated having fewer streams during late night and early morning hours, medium usage during the day and peak time from 5 PM to 1AM. Streams will be 30% higher on Fridays, where on Saturday and Sunday they will increase to 40% compared to average work day usage."
    ]
   },
   {
@@ -235,7 +235,7 @@
     "# Creating H column to number each hour in the date range \n",
     "df= pd.DataFrame({'H': np.arange(len(dfdate))}, index=dfdate)\n",
     "\n",
-    "# Adding column H to df2 dataframe\n",
+    "# Adding column H to df2 data frame\n",
     "df2 = df['H']\n",
     "\n",
     "# Spliting time series by time of the day\n",
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting time of day clasification as a hard value fo each period\n",
+    "# Setting time of day classification as a hard value of each period\n",
     "night['periods'] = 'night'\n",
     "morning['periods'] = 'morning'\n",
     "afternoon['periods'] = 'afternoon'\n",
@@ -562,7 +562,7 @@
    "id": "432741d4-e8ab-44ce-a0ed-95b7c43bfe63",
    "metadata": {},
    "source": [
-    "Data needs to be joined together and for that we will need to specify a common index across all dataframes, H column will be used for it."
+    "Data needs to be joined together and for that we will need to specify a common index across all data frames, H column will be used for it."
    ]
   },
   {
@@ -701,7 +701,7 @@
     }
    ],
    "source": [
-    "# Appending all time of the day dataframes to night\n",
+    "# Appending all time of the day data frames to night\n",
     "night = night.append(morning)\n",
     "night = night.append(afternoon)\n",
     "night = night.append(evening)\n",
@@ -1062,7 +1062,7 @@
    "id": "84745097-072d-4d79-9d85-ac319196c466",
    "metadata": {},
    "source": [
-    "User ID will be generated chosing two random letters followed by three random numbers, 50 active users from Ireland will have User IDs assigned. User data initially will be simulated as a separate dataframe and subsequently joined based on randomly assigned user count value N."
+    "User ID will be generated choosing two random letters followed by three random numbers, 50 active users from Ireland will have User IDs assigned. User data initially will be simulated as a separate data frame and subsequently joined based on randomly assigned user count value N."
    ]
   },
   {
@@ -1179,11 +1179,11 @@
     "# Setting random seed for Python Random method\n",
     "random.seed(125)\n",
     "\n",
-    "# A for loop for radom 2 letter and random 3 digits to be generated as user IDs\n",
+    "# A for loop for random 2 letter and random 3 digits to be generated as user IDs\n",
     "for i in range(50):\n",
     "    uid.append(''.join(random.choices(string.ascii_uppercase,k=2)) + ''.join(random.choices(string.digits,k=3)))\n",
     "\n",
-    "# Creating df2 dataframe with numbered 50 users\n",
+    "# Creating df2 data frame with numbered 50 users\n",
     "df2= pd.DataFrame({'N': np.arange(50)})\n",
     "\n",
     "# Adding generated user IDs to df2\n",
@@ -1375,7 +1375,7 @@
     "# User Name\n",
     "***\n",
     "MFLIX platform user name will be selected from list of popular Irish names depending on gender variable assigned previously.\n",
-    "Names retrieved retrieved from [Irishcentral](https://www.irishcentral.com/roots/100-irish-language-first-names-meanings) website by copying page data to text file and using regular expressions to extract a list of 100 popular Irish names. Regular expressions are used for text processing operations, it will be used to identify the patern of numbered names in the file and save them as a list. "
+    "Names retrieved from [Irishcentral](https://www.irishcentral.com/roots/100-irish-language-first-names-meanings) website by copying page data to text file and using regular expressions to extract a list of 100 popular Irish names. Regular expressions are used for text processing operations, it will be used to identify the pattern of numbered names in the file and save them as a list."
    ]
   },
   {
@@ -1390,14 +1390,6 @@
     "4. Open new text document with editor of choice\n",
     "5. Contol+v inside the file to paste copied data\n",
     "6. Save txt file in project location under data folder as names.txt file"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0505e13-9581-4c25-8779-725b90516f4c",
-   "metadata": {},
-   "source": [
-    "https://www.irishcentral.com/roots/100-irish-language-first-names-meanings"
    ]
   },
   {
@@ -1459,7 +1451,7 @@
     "# Opening names.txt file for saved website data, reading its contents\n",
     "with open('data/names.txt', 'r', encoding=\"utf8\" ) as f2:\n",
     "    data = f2.read()\n",
-    "    print(data[:2500])"
+    "    print(data[:2500]) # Outputting some of data for review"
    ]
   },
   {
@@ -1521,7 +1513,7 @@
    "id": "8f055f75-ef21-43aa-80b4-2955acf2ff5e",
    "metadata": {},
    "source": [
-    "Looking at the website we should have 100 Irish names: 50 female and 50 male. Regular expression have matched 102 results- first and last will be not selected later as not relevant."
+    "Looking at the website we should have 100 Irish names: 50 females and 50 males. Regular expression has matched 102 results- first and last will be not selected later as not relevant."
    ]
   },
   {
@@ -1558,7 +1550,7 @@
     "# Saving result as a list\n",
     "split = tosplit.to_list()\n",
     "\n",
-    "# List is saved as two columns in a dataframe allowing for clean names under single column\n",
+    "# List is saved as two columns in a data frame allowing for clean names under single column\n",
     "splitnames= pd.DataFrame(split, columns= ['numbers','names'])"
    ]
   },
@@ -1797,7 +1789,7 @@
    "id": "0ada0783-1823-43af-9d49-d6d6f7ca0602",
    "metadata": {},
    "source": [
-    "Data will be joined together randomly assigning N- user counts number for each stream instance that will be used as index fro joining dataframes. Before it is done, data lines will be repeated by the number of streams generated for that hour, updating dataset to have a data line for each stream instance per specified hour."
+    "Data will be joined together randomly assigning N- user counts number for each stream instance that will be used as index for joining data frames. Before it is done, data lines will be repeated by the number of streams generated for that hour, updating dataset to have a data line for each stream instance per specified hour."
    ]
   },
   {
@@ -1951,7 +1943,7 @@
     }
    ],
    "source": [
-    "# Expanding the dataframe to have value line for each stream in an hour\n",
+    "# Expanding the data frame to have value line for each stream in an hour\n",
     "fulldf = pd.DataFrame(df.values.repeat(df.streams, axis=0), columns=df.columns)\n",
     "fulldf"
    ]
@@ -2131,7 +2123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting 'N' (numner of users) as index for both dataframes\n",
+    "# Setting 'N' (number of users) as index for both data frames\n",
     "df2.set_index('N', inplace=True)\n",
     "fulldf.set_index('N', inplace=True)"
    ]
@@ -2775,7 +2767,7 @@
    "id": "da227181-f804-45a1-a8a8-1f112312be56",
    "metadata": {},
    "source": [
-    "Looking at total streams by category Drama comes out as most popular with Fantasy and Romance froming top 3 viewed categories."
+    "Looking at total streams by category Drama comes out as most popular with Fantasy and Romance forming top 3 viewed categories."
    ]
   },
   {
@@ -2785,7 +2777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Slicing one weeks data from 19/12/2021 to 26/12/2021\n",
+    "# Slicing one week’s data from 19/12/2021 to 26/12/2021\n",
     "week3 = fulldf[(fulldf['udates'] > '2021-12-20') & (fulldf['udates'] <= '2021-12-27')]"
    ]
   },
@@ -2981,7 +2973,7 @@
    "id": "bf1768b4-bdfa-4116-a578-95a2caa290c8",
    "metadata": {},
    "source": [
-    "Loking at third week of December categories watched by gender male users have more views across all categories except Horror where there were more views by female users."
+    "Looking at third week of December categories watched by gender male users have more views across all categories except Horror where there were more views by female users."
    ]
   },
   {
@@ -3018,7 +3010,7 @@
    "id": "d913df27-eb55-4168-8d83-9913a2a8584e",
    "metadata": {},
    "source": [
-    "Highest daily usage during the month is observed on Friday followed by Saturday and Sunday. This is unexpected as Saturday and Sunday should ahve 10% more views compared to Friday, yet after confirming to calendar it evident values of 5 Fridays in December are taken where it is 4 Saturdays and Sundays. It highlights importance of reviewing and challenging data to close out any possible divergence."
+    "Highest daily usage during the month is observed on Friday followed by Saturday and Sunday. This is unexpected as Saturday and Sunday should have 10% more views compared to Friday, yet after confirming to calendar it evident values of 5 Fridays in December are taken where it is 4 Saturdays and Sundays. It highlights importance of reviewing and challenging data to close out any possible divergence."
    ]
   },
   {
@@ -3055,7 +3047,7 @@
     }
    ],
    "source": [
-    "# Week 3 Stream Distribution by Time of Day Plot\n",
+    "# Week 3 Stream Distribution by Time-of-Day Plot\n",
     "\n",
     "# Seaborn plot style- darkgrid\n",
     "sns.set_theme(style=\"darkgrid\")\n",
