--- a/project.ipynb
+++ b/project.ipynb
@@ -3122,151 +3122,26 @@
    "id": "e5366d2d-76f7-45a7-8b88-c3df4cc64cdb",
    "metadata": {},
    "source": [
-    "https://stackoverflow.com/questions/41598916/resize-the-image-in-jupyter-notebook-using-markdown"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79a1b6be-659e-4cea-bbd1-6453b7552c86",
-   "metadata": {},
-   "source": [
-    "https://stackoverflow.com/questions/41598916/resize-the-image-in-jupyter-notebook-using-markdown"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e678474e-1af7-4d83-9ae1-d37a2ae21d4a",
-   "metadata": {},
-   "source": [
-    "https://stackoverflow.com/questions/56310849/generate-random-timeseries-data-with-dates"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "870f4587-3c9b-478d-a80e-e71ea0afd784",
-   "metadata": {},
-   "source": [
-    "https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d194097c-b9c7-4fe2-a2f9-7df24c2461cb",
-   "metadata": {},
-   "source": [
-    "https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13ffbcbe-fc0f-4fad-9025-7b6a2e77b610",
-   "metadata": {},
-   "source": [
-    "https://numpy.org/doc/stable/reference/generated/numpy.rint.html\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad8a88a8-47cf-4fbe-aa45-0ac14d91f9f1",
-   "metadata": {},
-   "source": [
-    "https://stackoverflow.com/questions/28009370/get-weekday-day-of-week-for-datetime-column-of-dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4132a8c8-ab6e-4e0c-9727-03333eb41c8e",
-   "metadata": {},
-   "source": [
-    "https://pandas.pydata.org/pandas-docs/version/0.17.1/merging.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d554ee70-d7cd-42db-9198-47f41a2708c8",
-   "metadata": {},
-   "source": [
-    "https://www.stackvidhya.com/pandas-iterate-over-rows/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f67fd79-e20d-47ac-938d-cfd6ef8b6409",
-   "metadata": {},
-   "source": [
-    "https://datagy.io/pandas-conditional-column/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b12c52a1-bdfe-42e5-b9de-d6c6aa076d25",
-   "metadata": {},
-   "source": [
-    "https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.itertuples.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1bf72e16-753f-463a-a1ff-8e1c8d6e6993",
-   "metadata": {},
-   "source": [
-    "https://www.geeksforgeeks.org/how-to-generate-a-random-letter-in-python/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebb7d019-1f98-4373-b24a-f64b9caaa933",
-   "metadata": {},
-   "source": [
-    "https://stackoverflow.com/questions/2823316/generate-a-random-letter-in-python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fbaae613-a665-4b9c-af84-cde16902b51d",
-   "metadata": {},
-   "source": [
-    "https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cac74868-b4ac-4ef7-a373-e97c8a7e3e2e",
-   "metadata": {},
-   "source": [
-    "https://www.tutorialspoint.com/python/string_decode.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54debe76-4fce-4052-b95e-d429f3cba7e9",
-   "metadata": {},
-   "source": [
-    "https://docs.python.org/3/library/re.html#re.search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf958a69-b65c-4976-a2aa-9e1602d5eb3c",
-   "metadata": {},
-   "source": [
-    "https://careerkarma.com/blog/python-valueerror-io-operation-on-closed-file/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6958245f-5fa4-4f19-966a-6ab92edb0847",
-   "metadata": {},
-   "source": [
-    "https://www.programiz.com/python-programming/file-operation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "67f74215-bedc-48f2-a482-1941fe683104",
-   "metadata": {},
-   "source": [
-    "https://www.kite.com/python/answers/how-to-split-a-pandas-dataframe-column-in-python"
+    "Aruchamy, V., 2021. How To Iterate Over Rows In Pandas Dataframe - Definitive Guide - Stack Vidhya. [online] Stack Vidhya. Available at: <https://www.stackvidhya.com/pandas-iterate-over-rows/> [Accessed 3 January 2022]. <br>\n",
+    "datagy. 2021. Set Pandas Conditional Column Based on Values of Another Column • datagy. [online] Available at: <https://datagy.io/pandas-conditional-column/> [Accessed 3 January 2022]. <br>\n",
+    "Debrc, 2021. How to generate a random letter in Python? - GeeksforGeeks. [online] GeeksforGeeks. Available at: <https://www.geeksforgeeks.org/how-to-generate-a-random-letter-in-python/> [Accessed 3 January 2022]. <br>\n",
+    "Docs.python.org. n.d. re — Regular expression operations — Python 3.10.1 documentation. [online] Available at: <https://docs.python.org/3/library/re.html#re.search> [Accessed 3 January 2022]. <br>\n",
+    "Gallagher, J., 2020. Python ValueError: I/O operation on closed file Solution. [online] Career Karma. Available at: <https://careerkarma.com/blog/python-valueerror-io-operation-on-closed-file/> [Accessed 3 January 2022]. <br>\n",
+    "GeeksforGeeks. 2021. Create a Pandas DataFrame from Lists - GeeksforGeeks. [online] Available at: https://www.geeksforgeeks.org/create-a-pandas-dataframe-from-lists/ [Accessed 2 January 2022]. <br>\n",
+    "Kite.com. n.d. Code Faster with Line-of-Code Completions, Cloudless Processing. [online] Available at: <https://www.kite.com/python/answers/how-to-split-a-pandas-dataframe-column-in-python> [Accessed 3 January 2022]. <br>\n",
+    "Mcloughlin, I., 2022. CAO Points Analysis. [online] GitHub. Available at: https://github.com/ianmcloughlin/cao-points/blob/main/cao-points-analysis.ipynb [Accessed 2 January 2022]. <br>\n",
+    "Mcloughlin, I., 2022. Regular Expressions. [online] Nbviewer.org. Available at: https://nbviewer.org/github/ianmcloughlin/jupyter-teaching-notebooks/blob/main/regex.ipynb [Accessed 2 January 2022]. <br>\n",
+    "Numpy.org. n.d. numpy.rint — NumPy v1.22 Manual. [online] Available at: <https://numpy.org/doc/stable/reference/generated/numpy.rint.html> [Accessed 3 January 2022]. <br>\n",
+    "Pandas.pydata.org. n.d. Merge, join, and concatenate — pandas 0.17.1 documentation. [online] Available at: <https://pandas.pydata.org/pandas-docs/version/0.17.1/merging.html> [Accessed 3 January 2022]. <br>\n",
+    "Pandas.pydata.org. n.d. Merge, join, concatenate and compare — pandas 1.3.5 documentation. [online] Available at: <https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html> [Accessed 3 January 2022]. <br>\n",
+    "Pandas.pydata.org. n.d. pandas.DataFrame.itertuples — pandas 1.3.5 documentation. [online] Available at: <https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.itertuples.html> [Accessed 3 January 2022]. <br>\n",
+    "Pandas.pydata.org. n.d. Time series / date functionality — pandas 1.3.5 documentation. [online] Available at: <https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html> [Accessed 3 January 2022]. <br>\n",
+    "Programiz.com. n.d. Python File I/O: Read and Write Files in Python. [online] Available at: <https://www.programiz.com/python-programming/file-operation> [Accessed 3 January 2022]. <br>\n",
+    "Severo, D., 2019. Handling Time-series in Pandas and Numpy.. [online] Dsevero.com. Available at: https://dsevero.com/posts/pandas/ [Accessed 2 January 2022]. <br>\n",
+    "Stack Overflow. 2010. Generate a random letter in Python. [online] Available at: <https://stackoverflow.com/questions/2823316/generate-a-random-letter-in-python> [Accessed 3 January 2022]. <br>\n",
+    "Stack Overflow. 2015. Get weekday/day-of-week for Datetime column of DataFrame. [online] Available at: <https://stackoverflow.com/questions/28009370/get-weekday-day-of-week-for-datetime-column-of-dataframe> [Accessed 3 January 2022]. <br>\n",
+    "Stack Overflow. 2017. Resize the image in jupyter notebook using markdown. [online] Available at: <https://stackoverflow.com/questions/41598916/resize-the-image-in-jupyter-notebook-using-markdown> [Accessed 3 January 2022]. <br>\n",
+    "Stack Overflow. 2019. Generate random timeseries data with dates. [online] Available at: <https://stackoverflow.com/questions/56310849/generate-random-timeseries-data-with-dates> [Accessed 3 January 2022]. <br>"
    ]
   },
   {
